🙂尝试实现第一版本，测试是否正常运行

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PanSou 盘搜</title>
+    <link rel="stylesheet" href="https://jsd.liiiu.cn/gh/willow-god/Sharding-fonts/ZhuqueFangsong-Regular/result.css">
+    <title>清羽盘搜 - 清羽飞扬自建网盘聚合搜索服务</title>
   </head>
   <body>
     <div id="app"></div>
